--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "my-react-three-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
-    "@react-three/drei": "^9.109.5",
-    "@react-three/fiber": "^8.17.5",
+    "@react-three/drei": "9.78.1",
+    "@react-three/fiber": "8.13.4",
+    "@react-three/postprocessing": "2.15.1",
+    "@react-three/rapier": "1.1.1",
     "@supabase/supabase-js": "^2.45.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "0.153.0",
     "gh-pages": "^6.1.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
-    "three": "^0.167.1",
+    "three": "0.154.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
